# MasFoam

./: LICENSE  MasFoam.code-workspace  Readme.md  Сделать.txt
Labs/: Derivs.py  DifEqSolvers.py  Double.py  Gauss.py  Integrate.py  Interpolation.py  Lab 1. Derivatives calculation.ipynb  Lab 3. Nonlinear equations.ipynb  Lab 4. Interpolation.ipynb  Lab 5. Integrals.ipynb  Lab 6. Differentiial equations.ipynb  Lab 8. Boundary ODE.ipynb  LinAlg.py  NonlinEqSolvers.py  Norms.py  ODE.py  SysLinEqSolvers.py  SysNonlinEqSolvers.py
Labs/Lab 2. Linear equations/: Lab 2. Linear equations.ipynb
MasFoam/: CMakeLists.txt  PythonModule.cpp
MasFoam/UnitTests/: CMakeLists.txt  LinearEquations.cpp
MasFoam/include/MasFoam/Data/: Compare.h  Matrix.h  Vector.h  _matrix_imp.h  _vector_imp.h
MasFoam/include/MasFoam/Derivative/: Derivative.h
MasFoam/include/MasFoam/LinearEquations/: GaussSolver.h
